--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ db/*.sqlite3
 # Ignore all logfiles and tempfiles.
 !/log/.keep
 /tmp
+
+# Ignore application configuration
+/config/application.yml
