--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: spaceatstanford
+  pool: 5
+  username: ssi
+  password: <%= ENV['SSI_DATABASE_PASSWORD'] %>
