--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: habmc
+  database: spaceatstanford
   pool: 5
   username: ssi
   host: localhost
