--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ db/*.sqlite3
 
 # Ignore application configuration
 /config/application.yml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
