Add PostgreSQL as production database

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,6 @@ db/*.sqlite3
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
+.ebextensions
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
